kubernetes/node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 3000 # port ที่จะใช้ในการเชื่อมต่อกับ service
      targetPort: 3000 # port ที่จะใช้ในการเชื่อมต่อกับ container
      nodePort: 30000 # port ที่จะใช้ในการเข้าถึง service นี้จากภายนอก

# วิธีการรันไฟล์ kubectl apply -f node-service.yml
# หากต้องการอัพเดทสามารถใช้คำสั่ง kubectl apply -f node-service.yml ได้เลย
